--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,40 @@
-# Local .terraform directories
-**/.terraform/*
-
-# .tfstate files
+# Terraform files
+.terraform/
 *.tfstate
-*.tfstate.*
-
-# Crash log files
-crash.log
-crash.*.log
-
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
+*.tfstate.backup
 *.tfvars
 *.tfvars.json
+.crash
+.terraform.lock.hcl
 
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
+# Sensitive local overrides (not to be committed)
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
 
-# Ignore transient lock info files created by terraform apply
-.terraform.tfstate.lock.info
+# Terraform plan output
+*.plan
 
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
+# Local logs
+*.log
 
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
+# OS-specific junk
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# Ignore CLI configuration files
-.terraformrc
-terraform.rc
+# VS Code
+.vscode/
+
+# JetBrains IDEs
+.idea/
+
+# macOS folder attributes
+__MACOSX/
+
+# Executables / local binaries (just in case)
+*.exe
+*.out
+*.class
+*.bin
